[package]
name = "concelare_economy"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
pumpkin-plugin-api = { version = "0.1.0", git = "https://github.com/Pumpkin-MC/Pumpkin", package = "pumpkin-plugin-api" }
tracing = "0.1.44"
uuid = { version = "1.23.0", features = ["v7", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
redb = "4.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"


[profile.release]
lto = true
